    changes:
      - 新增功能
        1、添加对uni-app（Vue3版本）的支持
v1.2.0:
    date:2024-09-01
    changes:
      - 修复bug
        1、修复uni-app平台的ui-canvas组件在ts环境中引入报错问题
        2、修复微信小程序版本的ui-canvas的region默认值设置错误问题
        3、SVG 画笔
            * 修复lineWidth不生效问题
        4、Canvas画笔
            * 修复drawImage在非H5端源图片尺寸错误问题
      - 优化改造
        1、getLoopColors 可修改基础色
      - 新增功能
        1、Canvas画笔
            * H5环境下添加bind绑定事件方法
            * createConicGradient 角度渐变色
            * 配置config添加可配置项
              > lineCap 线的端点类型
              > lineJoin 线的拐角连接方式
            * 支付宝小程序版本的ui-canvas
            * 重置 reset
        2、SVG 画笔
            * 配置config添加可配置项
              > lineCap 线的端点类型
              > lineJoin 线的拐角连接方式
            * 重置 reset
        3、assemble 步进生成器
        4、option 配置项
            * initOption 初始化
            * mergeOption 合并
v1.2.1:
    date:2024-09-21
    changes:
      - 修复bug
        1、修复未定义RawCanvas类型问题
      - 新增功能
        1、树布局 treeLayout
            * 新增doUpdate方法
            * 新增deg文字建议旋转弧度
v1.3.0:
    date:2025-01-04
    changes:
      - 修复bug
        1、SVG 画笔
            * 修复图形stroke模式的lineWidth、lineDash、lineCap、lineJoin不生效问题
        2、从types中移除被废弃的画笔属性
      - 新增功能
        1、Canvas画笔
            * 配置config添加可配置项
              > rectRadius 矩形圆角半径
            * clearCircle 圆形橡皮擦
        2、SVG画笔
            * 配置config添加可配置项
              > rectRadius 矩形圆角半径
        3、坐标系
            * 地理坐标系 mapCoordinate
v1.4.0:
    date:2025-05-18
    changes:
      - 新增功能
        1、SVG画笔
            * toDataURL 获取画布的base64地址
        2、布局
            * 饼布局 pieLayout
            * 直方布局 barLayout
v1.5.0:
    date:2025-09-15
    changes:
      - 修复bug
        1、修复ui-canvas（uniapp版）方法toDataURL在部分端未正确解析成base64返回
          （包括：微信小程序）
        2、修复ui-canvas（微信小程序版）方法toDataURL未正确解析成base64返回
      - 新增功能
        1、Canvas画笔
            * 添加scale配置，可以控制画布缩放倍率
v1.6.0:
    date:
    changes:
      - 新增功能
        1、Canvas画笔
            * 转换画手：translate、rotate